add register and logging in demo with thymeleaf